--- a/Resources/Create_Data_Set.ipynb
+++ b/Resources/Create_Data_Set.ipynb
@@ -8,6 +8,8 @@
       },
       "outputs": [],
       "source": [
+        "#Import relevant libraries \n",
+        "\n",
         "from __future__ import print_function\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -22,13 +24,17 @@
       },
       "outputs": [],
       "source": [
+        "#Create class player\n",
+        "\n",
         "class Player:\n",
+        "\n",
+        "  #Constructor\n",
         "  def __init__(self, time, win_rate,nr_deposit, label):\n",
         "    self.time = time\n",
         "    self.win_rate = win_rate\n",
         "    self.nr_deposit = nr_deposit\n",
         "    self.label = label\n",
-        "\n",
+        "  \n",
         "  def get_player_params(self):\n",
         "    return [self.time, self.win_rate, self.nr_deposit, self.label]\n"
       ]
@@ -41,6 +47,8 @@
       },
       "outputs": [],
       "source": [
+        "#Create player function\n",
+        "\n",
         "def create_player_list(iteration_span, time_span, win_rate_span,\n",
         "                         nr_deposit, answer):\n",
         "    player_list = []\n",
@@ -63,6 +71,7 @@
       },
       "outputs": [],
       "source": [
+        "# Ctreate training data.\n",
         "training_data =  \\\n",
         "      create_player_list([400,1000], [0,3], [.8,3], [0,2], 0)+\\\n",
         "      create_player_list([400,1000], [1,2], [5,7], [2,3], 0)+\\\n",
@@ -110,6 +119,7 @@
       },
       "outputs": [],
       "source": [
+        "#Package data into a pandas data frame\n",
         "df = pd.DataFrame(training_data)"
       ]
     },
@@ -121,6 +131,7 @@
       },
       "outputs": [],
       "source": [
+        "#Label dataframe columns\n",
         "df.columns = [\"Time\", \"Win/Loss Ratio\", \"Number of Deposits\", \"label\"]"
       ]
     },
@@ -269,6 +280,7 @@
         }
       ],
       "source": [
+        "#Return data frame\n",
         "df"
       ]
     },
@@ -285,10 +297,10 @@
       },
       "outputs": [],
       "source": [
-        "\n",
+        "#Save dataframe as a .csv file\n",
         "# from google.colab import files\n",
         "\n",
-        "df.to_csv('players.csv', index=False, encoding = 'utf-8-sig') \n",
+        "df.to_csv('testplayer.csv', index=False, encoding = 'utf-8-sig') \n",
         "# files.download('players.csv')\n"
       ]
     }
